Install composer dev dependencies. Added required PHP extensions. Improve Makefile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     build:
       context: ./docker/php
     volumes:
-      - ./src:/src
+      - ./:/code
   mysql:
     container_name: skeleton_mysql_1
     image: mysql:5.7
