--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,8 @@ services:
       - "80:80"
     volumes:
       - ./etc/nginx/nginx.conf:/etc/nginx/conf.d/nginx.conf
-      - ./src:/src
+      - ./src:/app
+      - ./:/code
   php:
     container_name: skeleton_php_1
     image: php:8.0-fpm
