Integrate Symfony 5 skeleton into existing app to run with docker.
Relocate bootstrap files.

--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80 default_server;
-    root /src/public;
+    root /code/public;
 
     index index.php index.html index.htm;
 
