--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,20 @@
         }
     ],
     "require": {
-        "php": ">=8.0"
+        "php": ">=7.2.5",
+        "ext-ctype": "*",
+        "ext-iconv": "*",
+        "symfony/console": "5.2.*",
+        "symfony/dotenv": "5.2.*",
+        "symfony/flex": "^1.3.1",
+        "symfony/framework-bundle": "5.2.*",
+        "symfony/twig-bundle": "5.2.*",
+        "symfony/yaml": "5.2.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9",
-        "squizlabs/php_codesniffer": "^3.2"
+        "phpunit/phpunit": "^8",
+        "squizlabs/php_codesniffer": "^3.2",
+        "symfony/phpunit-bridge": "^5.2"
     },
     "config": {
     },
@@ -26,6 +35,12 @@
     "autoload-dev": {
         "psr-4": {
             "THN\\Tests\\": "tests/"
+        }
+    },
+    "scripts": {
+        "auto-scripts": {
+            "cache:clear": "symfony-cmd",
+            "assets:install %PUBLIC_DIR%": "symfony-cmd"
         }
     }
 }
