Install PHP mysql pdo exntension extension and set up database connection through simple PDO class.
Define THNPDO service through dependency inyection with autowiring

--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,7 @@
         }
     ],
     "require": {
-        "php": ">=7.2.5",
-        "ext-ctype": "*",
-        "ext-iconv": "*",
+        "php": "^7.4.0",
         "symfony/console": "5.2.*",
         "symfony/dotenv": "5.2.*",
         "symfony/flex": "^1.3.1",
