--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,18 +1,10 @@
-# This file is the entry point to configure your own services.
-# Files in the packages/ subdirectory configure your dependencies.
-
-# Put parameters here that don't need to change on each machine where the app is deployed
-# https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
 
 services:
-    # default configuration for services in *this* file
     _defaults:
-        autowire: true      # Automatically injects dependencies in your services.
-        autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+        autowire: true
+        autoconfigure: true
 
-    # makes classes in src/ available to be used as services
-    # this creates a service per class whose id is the fully-qualified class name
     THN\:
         resource: '../src/'
         exclude:
@@ -20,22 +12,9 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
             - '../src/Tests/'
+    THN\Shared\:
+        resource: '../src/Shared/'
 
-    # controllers are imported separately to make sure services can be injected
-    # as action arguments even if you don't extend any base controller class
-    THN\Infrastructure\Controller\:
-        resource: '../src/Infrastructure/Controller/'
+    THN\Apps\Backoffice\:
+        resource: '../apps/backoffice/src/'
         tags: ['controller.service_arguments']
-
-    THN\Application\Service\:
-        resource: '../src/Application/Service/'
-
-    THN\Application\UseCase\:
-        resource: '../src/Application/UseCase/'
-
-    THN\Infrastructure\Persistence\:
-        resource: '../src/Infrastructure/Persistence/'
-
-
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
