--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,4 +1,4 @@
 index:
    path: /
-   controller: THN\Apps\Backoffice\Controller\HotelController::list
+   controller: THN\Apps\Backoffice\Controller\ListHotelController
    methods:  [GET]
