--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,17 +4,12 @@ services:
     _defaults:
         autowire: true
         autoconfigure: true
-
     THN\:
         resource: '../src/'
         exclude:
-            - '../src/DependencyInjection/'
-            - '../src/Entity/'
             - '../src/Kernel.php'
-            - '../src/Tests/'
-    THN\Shared\:
-        resource: '../src/Shared/'
-
+    # THN\Shared\:
+    #     resource: '../src/Shared/'
     THN\Apps\Backoffice\:
         resource: '../apps/backoffice/src/'
         tags: ['controller.service_arguments']
