Relocate framework controller to let Kernel autowiring.
Technical debt generated: extract application(framework) folder from src/. Controller's namespaces ready to migrate.

--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     "autoload": {
         "psr-4": {
             "THN\\": "src/",
-            "THN\\Apps\\": "apps/"
+            "THN\\": "src/"
         }
     },
     "autoload-dev": {
