Create new endpoint to get hotel reservations.
Create ValueObject base class and interface.
Added Room ValueObject to delegate extra information.

DB updated.

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -2,3 +2,7 @@ index:
    path: /
    controller: THN\Controller\ListHotelController
    methods:  [GET]
+hotel-reservation:
+   path: /hotel/{id}/reservation
+   controller: THN\Controller\GetHotelReservationController
+   methods:  [GET]
