--- a/composer.json
+++ b/composer.json
@@ -19,15 +19,15 @@
         "symfony/yaml": "5.2.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8",
+        "phpunit/phpunit": "^9",
+        "php-mock/php-mock-phpunit": "^2.5",
         "squizlabs/php_codesniffer": "^3.2",
-        "symfony/phpunit-bridge": "^5.2"
+        "mockery/mockery": "^1.3"
     },
     "config": {
     },
     "autoload": {
         "psr-4": {
-            "THN\\": "src/",
             "THN\\": "src/"
         }
     },
