--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -10,4 +10,6 @@ RUN apt-get install -y \
         zip \
         unzip
 
-RUN docker-php-ext-install pdo pdo_mysql mysqli
+# RUN docker-php-ext-install pdo pdo_mysql mysqli
+
+RUN docker-php-ext-enable xdebug
