Update gitignore to include tests/ folder

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,8 @@
 /var/
 /vendor/
 /media/
-/tests/
+/tests/coverage/
+/tests/test-reports/
 ###< symfony/framework-bundle ###
 
 ###> phpunit/phpunit ###
